# ragbrain

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile.api  LICENSE  NOTICE  PROJECT_STATUS.md  README.md  SECURITY.md  docker-compose.replicas.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
cogniflow-api/: main.py
cogniflow-web/: Dockerfile  next.config.ts  package.json
demo/: benchmark.py  benchmark_frameworks.py  capture_demo.py  confusable_corpus.py  corpus.py  doc_head_to_head.py  head_to_head.py  nvidia_embeddings.py  okf_head_to_head.py
demo/okf_demo_bundle/: README.md
demo/static_demo/: build_landing.py  build_page.py  index.html  landing.html
docs/: AUDIT_DASHBOARD.md  CONTEXT_API.md  DEMO.md  DOCUMENT_INGESTION.md  EMBEDDERS.md  EXTENDING.md  GENERATION.md  KNOWN_ISSUES.md  RFC_TEMPLATE.md  index.html
examples/: heartbeat_demo.py  policy_config.py
launch/: EXPLAINER.md  POSTS.md
ragbrain-api/: README.md  main.py
ragbrain-web/: Dockerfile  package.json  pnpm-lock.yaml
scripts/: demo.sh  two_replica_proof.sh
src/cogniflow/: __init__.py  context.py  eval_corpus.py  faithfulness.py  generation.py  generators.py  observability.py  okf.py  pipelines.py  registry.py  rerankers.py
src/ragbrain/: __init__.py  context.py  documents.py  eval.py  generators.py  observability.py  okf.py  registry.py  rerankers.py  verification.py  writeback.py
tests/: test_api_security.py  test_async_conformance.py  test_audit_api.py  test_audit_replay.py  test_bridge_llamaindex.py  test_cache.py  test_context.py  test_contracts_stable.py  test_contributor_proof.py  test_documents.py  test_durability_and_archive.py  test_embedders.py  test_eval_corpus.py  test_faithfulness.py  test_generation.py  test_http_retry.py  test_local_reranker.py  test_noop_conformance.py  test_okf.py  test_overfetch_config.py  test_pipeline_and_iso.py  test_pipelines.py  test_reference_policies.py  test_registry.py  test_rerankers.py  test_retrieval_quality.py  test_serving.py  test_validity_policy.py  test_verification.py  test_writeback_queue.py
tests/integration/: test_agent_heartbeat.py  test_audit_dashboard.py  test_context_api.py  test_doc_supersession.py  test_embedder_live.py  test_falkordb_substrate.py  test_generation_live.py  test_loop_closes.py  test_neo4j_parity.py  test_okf_supersession.py  (+5 more)
(+80 files in other folders)
