[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogniflow-rag"
version = "0.1.0"
description = "Temporal self-falsifying belief substrate for agentic RAG (ChronoRAG × PALIMPSEST)."
readme = "README.md"
requires-python = ">=3.10,<4"
license = { text = "Apache-2.0" }
authors = [{ name = "Nagendhra-web", email = "nagendhra405@gmail.com" }]
keywords = ["rag", "temporal", "knowledge-graph", "agents", "falsification", "memory"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Development Status :: 2 - Pre-Alpha",
]
# Phase 0: the CORE contracts are dependency-free by design (stdlib only).
# Backends/bridges pull heavy deps only when explicitly installed.
dependencies = []

[project.optional-dependencies]
# Pinned to the exact versions analyzed for the combo (graphiti-core 0.29.2,
# llama-index-core 0.14.23); the graph driver is range-pinned for dev.
graphiti = ["graphiti-core==0.29.2"]
llamaindex = ["llama-index-core==0.14.23", "llama-index-llms-openai-like>=0.4,<1"]
falkordb = ["falkordb>=1.0.10,<2"]
observability = ["langfuse>=2,<4"]
okf = ["pyyaml>=6,<7"]
backends = ["graphiti-core==0.29.2", "falkordb>=1.0.10,<2"]
all = [
  "graphiti-core==0.29.2",
  "llama-index-core==0.14.23",
  "llama-index-llms-openai-like>=0.4,<1",
  "falkordb>=1.0.10,<2",
  "pyyaml>=6,<7",
]
dev = ["pytest>=8,<9", "ruff>=0.6,<1", "pyyaml>=6,<7"]

[project.urls]
Homepage = "https://github.com/Nagendhra-web/cogniflow"
Repository = "https://github.com/Nagendhra-web/cogniflow"
Issues = "https://github.com/Nagendhra-web/cogniflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cogniflow"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: requires a running FalkorDB and an LLM key (skipped in CI)",
]
filterwarnings = [
  # FalkorDB's async redis client can emit this on GC after the event loop
  # closes on Windows; it is a harmless teardown artifact, not a test failure.
  "ignore::pytest.PytestUnraisableExceptionWarning",
]
